Code for basecases
